# ai-commander-wb95

./: README.md  example_map.json  generated-map.json  pyproject.toml  vocab.json
docs/: docs.md
docs/maps/: cost-graphs.md  json-maps.md  maps.md
docs/maps/flmt/: maneuverability.md
examples/: build_test_vocab.py  test-tokenize-commands.py
maps/: generate_map.py  generate_movement_cost_graph.py  random_map_10x10.json  visualise_map.py
src/ai_commander/: mcg.py  mflmt.py  tokenizer.py
src/ai_commander/examples/: build_test_vocab.py
src/ai_commander/maps/: generate_map.py  generate_movement_cost_graph.py  visualise_map.py
src/ai_commander/maps/flmt/: flmt.py
src/ai_commander/maps/flmt/train/: MFMLT.py  PlayerPathDataset.py  m-flmt.py  trainer.py
src/ai_commander/tools/: map_generator.py  name_generator.py  path_generator.py
tests/: test-tokenize-commands.py  test_build_test_vocab.py  test_movement_cost_graph.py  test_pipeline.py  test_visualise_map.py
tests/sources/: example_wb95_commands.txt
