[project]
name = "ai-commander-wb95"
version = "0.1.0"
description = "AI model for WB95-style wargames with LLM-style tokenizer"
authors = [{ name = "Dariusz Janicki", email = "satanjamnic@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]